--- a/css/css.css
+++ b/css/css.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body
 {
-	background:url(../icon/b.png);
+	/* background:url(../icon/b.png); *//*底圖不存在，所以刪掉*/
 	font-family:微軟正黑體;
 }
 select,select option
